--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [project]
-name = "ComfyUI_UploadToWebhookPushOver"
+name = "UploadToPushOver"
 description = "Send generated image to PushOver API webhook choose for only notification or add the image result as well. It can connect to anything if you just want a notification somewhere in your workflow"
 version = "1.2.0"
-license = {"LICENSE"}
+license = { file = "LICENSE"}
 dependencies = ["numpy", "requests", "Pillow"]
 
 [project.urls]
-Repository = "https://github.com/MijnSpam/ComfyUI_UploadToWebhookPushOver"
+Repository = "https://github.com/MijnSpam/UploadToPushOver"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
 PublisherId = "kbrambo"
-DisplayName = "ComfyUI_UploadToPushOver"
+DisplayName = "Upload to PushOver"
 Icon = ""
